Fixed a problem with the background colour not showing up in Chrome

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -4,6 +4,7 @@ body {
 	margin: 0;
 	font-family: Georgia, Serif;
 	background-image: linear-gradient(#9AE265 10%, #3ED530);
+	background-color: #9AE265;
 }
 
 /*
